--- a/css/test.css
+++ b/css/test.css
@@ -61,7 +61,6 @@ nav {
   font-weight: 400;
   font-style: italic;
   font-size: 30px;
-  line-height: 100%;
   text-align: center;
   align-items: center;
   justify-content: center;
@@ -79,8 +78,6 @@ nav {
   border-radius: 40px 40px 0 0;
   margin-top: -40px;
   position: relative;
-
-  /* border: 2px solid green; */
 }
 
 .menu-container {
@@ -90,8 +87,6 @@ nav {
   width: 100%;
   padding: 17px;
   animation: fadeUp 0.8s ease-out forwards;
-
-  /* border: 2px solid red; */
 }
 
 .menu-header {
@@ -127,8 +122,6 @@ nav {
 
 .card-favorite {
   position: absolute;
-  /* top: 30px;
-  right: 0; */
   background: none;
   border: none;
   padding: 0;
@@ -138,8 +131,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
-  /* pour clip-path */
+  overflow: hidden;  /* pour clip-path */
 }
 
 .heart-fill {
@@ -208,9 +200,9 @@ nav {
 }
 
 input[type="checkbox"] {
-  position: absolute;   /* sort du flux et n’occupe plus d’espace */
-  opacity: 0;           /* invisible */
-  width: 1px;           /* taille minuscule */
+  position: absolute;   /* N’occupe plus d’espace */
+  opacity: 0;           /* Non visible */
+  width: 1px;           /* Taille minuscule */
   height: 1px;
   margin: 0;
   padding: 0;
@@ -219,11 +211,6 @@ input[type="checkbox"] {
   overflow: hidden;
   white-space: nowrap;
   border: 0;
-}
-
-
-.menu-item input[type="checkbox"] {
-  display: none;
 }
 
 .menu-content {
@@ -243,7 +230,6 @@ input[type="checkbox"] {
   z-index: 2;
 }
 
-/* Carré vert */
 .square {
   position: absolute;
   top: 0;
@@ -267,11 +253,8 @@ input[type="checkbox"] {
   opacity: 1;
 }
 
-.menu-item input[type="checkbox"]:checked+.menu-content .item-text {
-  padding-right: 70px;
-}
-
-.menu-item input[type="checkbox"]:checked + .menu-content h4 {
+.menu-item input[type="checkbox"]:checked + .menu-content h4,
+.menu-item input[type="checkbox"]:checked + .menu-content .item-text {
   padding-right: 70px;
 }
 
@@ -287,7 +270,8 @@ input[type="checkbox"] {
 
 /* Texte long */
 .menu-item h4,
-.item-text p {white-space: nowrap;
+.item-text p {
+  white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   min-width: 0;
@@ -366,7 +350,6 @@ input[type="checkbox"] {
 .menu-item:nth-child(4) {
   animation-delay: 0.8s;
 }
-
 
 /******** FIN MENU-ITEM  ********/
 
